Fixed navbar look and fixed whitespace to the right on screen

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,12 +2,10 @@
 
 .navbar-header {
     float: left;
-    padding: 15px;
     text-align: center;
     width: auto;
 }
-.navbar-brand {float:none;}
 
-.navbar .navbar-inverse .navbar-fixed-top .navbar-header .navbar-brand {
-    color: lime-green;
+.navbar-brand {
+float: none;
 }
